# CMakeRampup

./: README.md
cmake_rampup/1_lesson/: CMakeLists.txt  main.c  submain.c  submain.h
cmake_rampup/2_lib_a_so_create/lib/: hello.c
cmake_rampup/3_lib_a_so_include/lib/: CMakeLists.txt  hello.c
cmake_rampup/3_lib_a_so_include/src/: CMakeLists.txt
cmake_rampup/4_lib_so_include_debug/lib/: CMakeLists.txt  hello.c
cmake_rampup/4_lib_so_include_debug/src/: main.c
cmake_rampup/5_lib_a_include_debug/: CMakeLists.txt
cmake_rampup/5_lib_a_include_debug/lib/: CMakeLists.txt  hello.c
cmake_rampup/5_lib_a_include_debug/src/: CMakeLists.txt
